@@ -1,3 +1,8 @@
+2011-09-15  Johan Bockgård  <bojohan@gnu.org>
+
+	* xdisp.c (try_cursor_movement): Only check for exact match if
+	cursor hpos found by set_cursor_from_row is valid.  (Bug#9495)
+
 2011-09-14  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Remove unused external symbols.
